[gd_scene load_steps=2 format=3 uid="uid://cjklxtssgk74o"]

[ext_resource type="Script" path="res://scripts/test_scripts/test_deck.gd" id="1_ndoff"]

[node name="TestDeck" type="Node"]
script = ExtResource("1_ndoff")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="shuffle_button" type="Button" parent="."]
offset_left = -1182.0
offset_top = -439.0
offset_right = -1120.0
offset_bottom = -408.0
scale = Vector2(2.48223, 2.94469)
text = "shuffle"

[node name="draw_button" type="Button" parent="."]
offset_left = -1179.0
offset_top = -332.0
offset_right = -1129.0
offset_bottom = -301.0
scale = Vector2(3.0319, 2.98368)
text = "draw"

[node name="reset_button" type="Button" parent="."]
offset_left = -1179.0
offset_top = -233.0
offset_right = -1019.0
offset_bottom = -141.0
theme_override_font_sizes/font_size = 41
text = "reset"

[node name="decks" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1182.0
offset_top = -136.0
offset_right = -1142.0
offset_bottom = -96.0
scale = Vector2(4.14815, 7.38278)

[node name="deck_label" type="Label" parent="decks"]
layout_mode = 1
anchors_preset = -1
anchor_left = -9.36095
anchor_top = -0.514041
anchor_right = -8.70736
anchor_bottom = -0.385751
offset_left = 379.452
offset_top = 19.4778
offset_right = 453.309
offset_bottom = 53.3462
scale = Vector2(0.329017, 0.16537)
theme_override_font_sizes/font_size = 28
text = "Decks
"
metadata/_edit_use_anchors_ = true

[node name="deck_list" type="ItemList" parent="decks"]
layout_mode = 0
offset_left = 0.835718
offset_top = 5.0129
offset_right = 161.836
offset_bottom = 332.013
scale = Vector2(0.23735, 0.107514)
item_count = 3
item_0/text = "shadows_of_the_necropolis"
item_1/text = "protectors_of_the_enclave"
item_2/text = "test"

[node name="frames" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1184.0
offset_top = 180.0
offset_right = -1144.0
offset_bottom = 220.0
scale = Vector2(4.14815, 7.38278)

[node name="frame_label" type="Label" parent="frames"]
layout_mode = 1
anchors_preset = -1
anchor_left = -9.36095
anchor_top = -0.514041
anchor_right = -8.70736
anchor_bottom = -0.385751
offset_left = 379.452
offset_top = 19.4778
offset_right = 453.309
offset_bottom = 53.3462
scale = Vector2(0.329017, 0.16537)
theme_override_font_sizes/font_size = 28
text = "Frames
"
metadata/_edit_use_anchors_ = true

[node name="frame_list" type="ItemList" parent="frames"]
layout_mode = 0
offset_left = 0.835718
offset_top = 5.0129
offset_right = 161.836
offset_bottom = 332.013
scale = Vector2(0.23735, 0.107514)

[connection signal="pressed" from="shuffle_button" to="." method="_on_shuffle_button_pressed"]
[connection signal="pressed" from="draw_button" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="item_clicked" from="decks/deck_list" to="." method="_on_deck_list_item_clicked"]
[connection signal="item_clicked" from="frames/frame_list" to="." method="_on_frame_list_item_clicked"]
